# auto-grader

./: .env  ARCHITECTURE.md  Cargo.toml  LICENCE-APACHE  LICENCE-MIT  README.md  SCHEMA.md  grader.nomad
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: check.yml  docker.yml
autograder_django_backend/: .env  .gitignore  .pylintrc  CONTRIBUTORS.txt  LICENSE  README.md  local.yml  manage.py  production.yml  pytest.ini  setup.cfg
autograder_django_backend/.envs/.local/: .postgres
autograder_django_backend/assignments/: models.py  views.py
autograder_django_backend/assignments/migrations/: 0001_initial.py
autograder_django_backend/autograder/: apps.py  models.py  serializers.py  views.py
autograder_django_backend/autograder/migrations/: 0001_initial.py  0002_alter_student_courses.py
autograder_django_backend/autograder/tests/: factory.py  test_assignment.py  test_course.py  test_professor.py  test_student.py
autograder_django_backend/autograder_django_backend/: conftest.py
autograder_django_backend/autograder_django_backend/templates/: base.html
autograder_django_backend/autograder_django_backend/users/: admin.py  apps.py  models.py  urls.py
autograder_django_backend/autograder_django_backend/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
autograder_django_backend/autograder_django_backend/utils/: tests.py
autograder_django_backend/compose/production/traefik/: traefik.yml
autograder_django_backend/config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
autograder_django_backend/config/settings/: base.py  local.py  production.py  test.py
autograder_django_backend/docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
autograder_django_backend/requirements/: local.txt
autograder_rust_runner/: Cargo.toml  Dockerfile
autograder_rust_runner/src/: main.rs
autograder_rust_runner/src/handlers/: java.rs  mod.rs  python.rs
autograder_rust_scheduler/: Cargo.toml
autograder_rust_scheduler/src/: main.rs
autograder_rust_schema/: Cargo.toml
autograder_svelte_frontend/: package.json
autograder_svelte_frontend/src/: App.svelte  app.scss
autograder_svelte_frontend/src/components/: Assignment.svelte
autograder_svelte_frontend/src/routes/: index.svelte
autograder_svelte_frontend/src/routes/assignments/: [id]@app.svelte
backend/: Cargo.toml  Dockerfile
backend/src/: backend.rs  job_pool.rs  main.rs
entity/: Cargo.toml
entity/src/: lib.rs
entity/src/entities/: job.rs  mod.rs  prelude.rs
grading-frontend/: Cargo.toml
grading-frontend/src/: main.rs
grading-runner/: Cargo.toml  Dockerfile
grading-runner/src/: main.rs
grading-runner/src/handlers/: java.rs  mod.rs  python.rs
grading-scheduler/: Cargo.toml  Dockerfile  index.html
grading-scheduler/src/: main.rs
grading-schema/: Cargo.toml
grading-schema/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220820_183735_create_assignment_table.rs
runner/: Cargo.toml
runner/src/: main.rs
runner/src/handlers/: java.rs  mod.rs  python.rs
schema/: Cargo.toml
svelte_frontend/: package.json
svelte_frontend/src/routes/: __layout-app.svelte  __layout.svelte  index.svelte  overview@app.svelte
(+3 files in other folders)
