[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Schema
schema = { path = "../schema" }

# Tokio
tokio-util = { version = "0.7.0", features = ["codec"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = "1.0"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Backend
warp = "0.3"
reqwest = { version = "0.11", features = ["blocking"] }
nomad-client = "0.0.6"
uuid = { version = "0.8", features = ["v4"] }
