[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Schema
schema = { path = "../schema" }
entity = { path = "../entity" }

# Tokio
tokio-util = { version = "0.7.0", features = ["codec"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = "1.0"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Actix
actix-files = "0.6"
actix-http = "3"
actix-rt = "2.7"
actix-service = "2"
actix-web = "4"

# Backend
reqwest = { version = "0.11", features = ["blocking"] }
nomad-client = "0.0.7"
uuid = { version = "1.1.2", features = ["v4"] }
dotenv = "0.15.0"
dotenv_codegen  = "0.15.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
listenfd = "1.0.0"
migration = { path = "../migration" }

# SeaORM
sea-orm = { version = "^0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
