[package]
name = "grading-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nomad-client = "0.0.6"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["blocking"] }
futures = "0.3"

# Schema
grading-schema = { path = "../grading-schema" }

# Tokio
tokio-util = { version = "0.7.0", features = ["codec"] }

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"